{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 71,
  "lineage": "68b4c24c-c37b-392a-1033-1f857db3caed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleController",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:040686950978:instance/i-00234b9907c521e06",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00234b9907c521e06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01346c801f598f040",
            "private_dns": "ip-172-20-10-7.ec2.internal",
            "private_ip": "172.20.10.7",
            "public_dns": "ec2-52-72-17-34.compute-1.amazonaws.com",
            "public_ip": "52.72.17.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07de4edd126a4884b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2a1f6919c970d86",
            "tags": {
              "Name": "Ansible-ControlNode"
            },
            "tags_all": {
              "Name": "Ansible-ControlNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a9730e8869e48b66"
            ]
          },
          "dependencies": [
            "aws_security_group.udemylab-securityGroup",
            "aws_subnet.udemylab-subnet1",
            "aws_vpc.udemylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleManagedDockerHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:040686950978:instance/i-060fd4a837b7e4ba6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060fd4a837b7e4ba6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02ddcda9874aec3fb",
            "private_dns": "ip-172-20-10-89.ec2.internal",
            "private_ip": "172.20.10.89",
            "public_dns": "ec2-35-168-2-229.compute-1.amazonaws.com",
            "public_ip": "35.168.2.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a08c069de497634",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2a1f6919c970d86",
            "tags": {
              "Name": "AnsibleManagedN-Docker"
            },
            "tags_all": {
              "Name": "AnsibleManagedN-Docker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a9730e8869e48b66"
            ]
          },
          "dependencies": [
            "aws_security_group.udemylab-securityGroup",
            "aws_subnet.udemylab-subnet1",
            "aws_vpc.udemylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleManagedNode1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:040686950978:instance/i-0b85e8430a2870525",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b85e8430a2870525",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e28d539cc48f9fec",
            "private_dns": "ip-172-20-10-82.ec2.internal",
            "private_ip": "172.20.10.82",
            "public_dns": "ec2-54-90-62-230.compute-1.amazonaws.com",
            "public_ip": "54.90.62.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e54ae47245531bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2a1f6919c970d86",
            "tags": {
              "Name": "AnsibleManagedN-ApacheTomcat"
            },
            "tags_all": {
              "Name": "AnsibleManagedN-ApacheTomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a9730e8869e48b66"
            ]
          },
          "dependencies": [
            "aws_security_group.udemylab-securityGroup",
            "aws_subnet.udemylab-subnet1",
            "aws_vpc.udemylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkens",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:040686950978:instance/i-0187866f545460be3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0187866f545460be3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03696bcd55e64f89f",
            "private_dns": "ip-172-20-10-103.ec2.internal",
            "private_ip": "172.20.10.103",
            "public_dns": "ec2-52-91-149-235.compute-1.amazonaws.com",
            "public_ip": "52.91.149.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005955dffacb8f373",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2a1f6919c970d86",
            "tags": {
              "Name": "jenkens-service"
            },
            "tags_all": {
              "Name": "jenkens-service"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a9730e8869e48b66"
            ]
          },
          "dependencies": [
            "aws_security_group.udemylab-securityGroup",
            "aws_subnet.udemylab-subnet1",
            "aws_vpc.udemylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:040686950978:instance/i-02c5aeab8f9947791",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c5aeab8f9947791",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0653d6220fb916ce6",
            "private_dns": "ip-172-20-10-210.ec2.internal",
            "private_ip": "172.20.10.210",
            "public_dns": "ec2-54-237-100-179.compute-1.amazonaws.com",
            "public_ip": "54.237.100.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aba77fa25b50451f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2a1f6919c970d86",
            "tags": {
              "Name": "Nexus-Server"
            },
            "tags_all": {
              "Name": "Nexus-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a9730e8869e48b66"
            ]
          },
          "dependencies": [
            "aws_security_group.udemylab-securityGroup",
            "aws_subnet.udemylab-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "udemylab-internetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040686950978:internet-gateway/igw-0c39aeffe8b916179",
            "id": "igw-0c39aeffe8b916179",
            "owner_id": "040686950978",
            "tags": {
              "Name": "udemylab-internetgateway"
            },
            "tags_all": {
              "Name": "udemylab-internetgateway"
            },
            "vpc_id": "vpc-03e4a8a1c7671cb90"
          },
          "dependencies": [
            "aws_vpc.udemylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "udemylab-routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040686950978:route-table/rtb-03cc2b658341ecd5c",
            "id": "rtb-03cc2b658341ecd5c",
            "owner_id": "040686950978",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c39aeffe8b916179",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udemylab-routeTable"
            },
            "tags_all": {
              "Name": "udemylab-routeTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e4a8a1c7671cb90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.udemylab-internetgateway",
            "aws_vpc.udemylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "udemylab-routetableassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d62e5981b6c45f21",
            "route_table_id": "rtb-03cc2b658341ecd5c",
            "subnet_id": "subnet-0b2a1f6919c970d86"
          },
          "dependencies": [
            "aws_internet_gateway.udemylab-internetgateway",
            "aws_route_table.udemylab-routeTable",
            "aws_subnet.udemylab-subnet1",
            "aws_vpc.udemylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "udemylab-securityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040686950978:security-group/sg-0a9730e8869e48b66",
            "description": "to allow inbound and outbound traffic to my udemylab ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9730e8869e48b66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221226134643255200000001",
            "name_prefix": "terraform-",
            "owner_id": "040686950978",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "udemylab-securityGroup"
            },
            "tags_all": {
              "Name": "udemylab-securityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e4a8a1c7671cb90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.udemylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "udemylab-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040686950978:subnet/subnet-0b2a1f6919c970d86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2a1f6919c970d86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040686950978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udemylab-subnet1"
            },
            "tags_all": {
              "Name": "udemylab-subnet1"
            },
            "vpc_id": "vpc-03e4a8a1c7671cb90"
          },
          "dependencies": [
            "aws_vpc.udemylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "udemylab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040686950978:vpc/vpc-03e4a8a1c7671cb90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-06a693e9d19a82083",
            "default_route_table_id": "rtb-0085b108d9cf009ab",
            "default_security_group_id": "sg-0d157940c0c5e18aa",
            "dhcp_options_id": "dopt-097f7336a5a116ded",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03e4a8a1c7671cb90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0085b108d9cf009ab",
            "owner_id": "040686950978",
            "tags": {
              "Name": "udemylab-vpc"
            },
            "tags_all": {
              "Name": "udemylab-vpc"
            }
          }
        }
      ]
    }
  ]
}